--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -28,7 +28,7 @@
 
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center" id="mcnaver">
-    <h1> Demon Fencer </h1>
+    <h1> Flappy Demon </h1>
     <a class="navbar-brand" href="#">
         <img src="assets/ui/logo.png" alt="Logo" style="width:40px;">
     </a>
